updated token help text

--- a/token.properties
+++ b/token.properties
@@ -1,2 +1,2 @@
-# Copy Event Portal token here.  Used by test files only.
+# Copy Event Portal token here.  Used by test JUnit files only locally, not bundled into API or JAR or anything.
 token=
